# orbidi

./: .gitignore  main.py  pyproject.toml
.github/workflows/: cloud-functions.yml  dbt.yml  terraform.yml
Desafio_1/: arquitectura_tecnica_datamesh.md  resumen_ejecutivo_datamesh.md
Desafio_1/docs/sources/: dag_mermaid.md  design_diagram.md  documentacion_arquitectura_datamesh.md
Desafio_2/: .gitignore  README.md  test_bq_connection.py
Desafio_2/.github/: README.md
Desafio_2/.github/workflows/: cloud-functions.yml  dbt.yml  terraform.yml
Desafio_2/dbt/: .gitignore  .user.yml  cloudbuild.yaml  dbt_project.yml  profiles.yml
Desafio_2/dbt/macros/: generate_schema_name.sql
Desafio_2/dbt/models/analytics/: _analytics.yml  taxis_weather_enriched.sql  vw_trips_weather_summary.sql
Desafio_2/dbt/models/silver/: _silver.yml  silver_taxis.sql  silver_weather.sql
Desafio_2/dbt/models/staging/: _staging.yml  stg_taxis.sql  stg_weather.sql
Desafio_2/docs/: SESSION_SUMMARY_2025-12-29.md  SESSION_SUMMARY_2025-12-29_dbt.md  SESSION_SUMMARY_2025-12-30_automation.md  SESSION_SUMMARY_2025-12-30_cicd.md  SESSION_SUMMARY_2025-12-31_pipeline_validation.md  VALIDATION_REPORT_2025-12-30.md  dbt_implementation_plan.md
Desafio_2/scripts/: apply_policy_tags.sh  backfill_taxis.sh  run_dbt_pipeline.sh  set_bigquery_quotas.sh
Desafio_2/src/ingest_taxis/: main.py  requirements.txt
Desafio_2/src/ingest_weather/: main.py  requirements.txt
Desafio_2/terraform/: README.md
Desafio_2/terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars  variables.tf
(+18 files in other folders)
